# WfCommons

./: .gitignore  .gitpod.yml  .readthedocs.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test.json  wfcommons-schema.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
blast_batch_test/: report.json
blast_batch_test/instances/: blast-chameleon-large-001.json  blast-chameleon-large-002.json  blast-chameleon-large-003.json  blast-chameleon-large-004.json  blast-chameleon-large-005.json  blast-chameleon-medium-001.json  blast-chameleon-medium-002.json  blast-chameleon-medium-003.json  blast-chameleon-medium-004.json  blast-chameleon-medium-005.json  blast-chameleon-small-001.json  blast-chameleon-small-002.json  blast-chameleon-small-003.json  blast-chameleon-small-004.json  blast-chameleon-small-005.json
blast_batch_test/translated/: blast-chameleon-large-001_radical_pilot.py  blast-chameleon-large-002_radical_pilot.py  blast-chameleon-large-003_radical_pilot.py  blast-chameleon-large-004_radical_pilot.py  blast-chameleon-large-005_radical_pilot.py  blast-chameleon-medium-001_radical_pilot.py  blast-chameleon-medium-002_radical_pilot.py  blast-chameleon-medium-003_radical_pilot.py  blast-chameleon-medium-004_radical_pilot.py  blast-chameleon-medium-005_radical_pilot.py  blast-chameleon-small-001_radical_pilot.py  blast-chameleon-small-002_radical_pilot.py  blast-chameleon-small-003_radical_pilot.py  blast-chameleon-small-004_radical_pilot.py  blast-chameleon-small-005_radical_pilot.py
data/schemes/: traces.json
docs/: requirements.txt
docs/source/: analyzing_instances.rst  analyzing_traces.rst  api_common.rst  conf.py  (+26 more)
tests/: requirements.txt  test_helpers.py  test_workflow.py
wfcommons/: __init__.py  cpu_benchmark_cli.py  utils.py  version.py
work/: workflow_summary_mqc.yaml
workflowhub/: __init__.py  errors.py  file.py  job.py  logger.py  machine.py  trace.py  types.py  utils.py  version.py
(+3888 files in other folders)
