[build-system]
requires = ["setuptools>=65.5.1"]  # PEP 518 specifications
build-backend = "setuptools.build_meta"

[project]
name = "wfcommons"
authors = [{name = "WfCommons team", email = "support@wfcommons.org"}]
description = "A Framework for Enabling Scientific Workflow Research and Education"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Documentation :: Sphinx",
    "Topic :: System :: Distributed Computing"
]
license = {text = "GNU General Public License v3 (GPLv3)"}
dependencies = [
    "jsonschema",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "python-dateutil",
    "requests",
    "scipy",
    "pyyaml",
    "pandas",
    "stringcase"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://wfcommons.org"
Source = "https://github.com/wfcommons/wfcommons"
Documentation = "https://docs.wfcommons.org"
Tracker = "https://github.com/wfcommons/WfCommons/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.dynamic]
version = {attr = "wfcommons.version.__version__"}

[tool.pytest.ini_options]
addopts="""
--cov-context test  \
--cov-config pyproject.toml \
--cov-report xml:coverage.xml \
--cov-report term-missing \
--cov ./wfcommons \
--ignore wfcommons/wfbench/translator/templates \
--no-cov-on-fail \
-ra \
-W ignore"""
testpaths = [
  "tests"
]
markers = [
  "unit: Mark a test as a unit test"
]